# gitupdater

./: README.md  gitupdater.py  pyproject.toml
