[build-system]                                                                                                                                                    
requires = ["setuptools"]
build-backend = "setuptools.build_meta"                                                                                                                           
                                                                                                                                                                    
[project]                                                                                                                                                         
name = "gitupdater"                                                                                                                                               
version = "1.0.0"                                                                                                                                                 
description = "Auto-update pip packages installed from GitHub"
requires-python = ">=3.9"  
